Got the extension to add or remove sites dynamically

--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Blocker</title>
-    <script src="popup.js"></script>
+    <title>Site Blocker</title>
+    <script src="popup.js" defer></script>
+    
 </head>
 <body>
-    <h2>Website Blocker</h2>
-    <p>This extension blocks access to certain websites.</p>
-    <p>you need to make this look better and have more functionalities man</p>
-    <p>this is one of your big projects for the year so better put some effort into this.</p>
-    
+    <h2>Blocked Websites</h2>
+    <input type="text" id="siteInput" placeholder="Enter website (example.com)">
+    <button id="addSite">Add</button>
+    <ul id="siteList"></ul>
 </body>
 </html>
