--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Blocker</title>
+    <link rel="stylesheet" href="popup.css">
     <script src="popup.js" defer></script>
     
 </head>
