added a button for mode toggling between blacklist and whitelist

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h2>Blocked Websites</h2>
+
+    <button id="modeToggle">BlackList</button>
+
     <input type="text" id="siteInput" placeholder="Enter website (example.com)">
     <button id="addSite">Add</button>
     <ul id="siteList"></ul>
